# ferrous

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  audit.toml  build.env.example
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  native_frontend_ci.yml  release.yml  ui_ci.yml
docs/: BINARY_BRIDGE_PLAN.md  BITRATE_AND_WAVEFORM_FOLLOWUP_PLAN.md  DEADBEEF_SPECTROGRAM_SYNC_ANALYSIS.md  DEVELOPMENT.md  FOLDER_FIRST_LIBRARY_PLAN.md  FRONTEND_CLI.md  GPU_SPECTROGRAM_RESCUE.md  INSTALL.md  ITUNES_ALBUM_ART_REPLACEMENT_PLAN.md  LASTFM_SCROBBLING_PLAN.md  LIBRARY_PERFORMANCE_PLAN.md  MAIN_QML_REFACTOR_FOLLOWUP_PLAN.md  MIGRATION_NOTES.md  NATIVE_FRONTEND.md  OPTIMIZATION_PLAN.md  PLANS.md  RESPONSIVENESS_AND_REACTIVE_BRIDGE_PLAN.md  ROADMAP.md  RUN_UI_NUKE_FLAGS_PLAN.md  SEARCH_HITCH_DIAGNOSTICS_ANALYSIS.md  SPECTROGRAM_SMOOTHNESS_BASELINE.md  TAG_EDITOR_PLAN.md  TEST_PLAN.md
docs/archive/: LASTFM_SCROBBLING_PLAN.md  SEARCH_APPLY_HITCH_PLAN.md  SEARCH_MODEL_REFINEMENT_PLAN.md
docs/superpowers/plans/: 2026-04-11-spectrogram-zoom.md  2026-04-11-stft-adaptive-zoom.md  2026-04-15-spectrogram-zoom-rendering-fix.md  2026-04-18-backend-owned-playback-clock.md
docs/superpowers/specs/: 2026-04-01-channel-ms-buttons-design.md  2026-04-17-rolling-gapless-zoom-design.md  2026-04-18-backend-owned-playback-clock-design.md
native_ui/: CMakeLists.txt  README.md
native_ui/qml/: Main.qml
native_ui/src/: BridgeClient.cpp  BridgeClient.h  LibraryTreeModel.cpp  LibraryTreeModel.h  SpectrogramItem.cpp  SpectrogramItem.h  WaveformItem.cpp  main.cpp
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: ferrous.spec
scripts/: build-rpm.sh  bump-version.sh  find-unusual-flac.sh  install-rpm.sh  load-build-env.sh  run-native-ui.sh  run-tests.sh  run-ui.sh
src/: fuzzy_match.rs  lib.rs  main.rs  profile_logging.rs  raw_audio.rs
src/analysis/: cache.rs  decoders.rs  fft.rs  gst_waveform.rs  mod.rs  session.rs
src/app/: mod.rs
src/artwork/: mod.rs
src/frontend_bridge/: commands.rs  config.rs  events.rs  ffi.rs  library_tree.rs  mod.rs  queue.rs  search.rs  workers.rs
src/lastfm/: mod.rs
src/metadata/: mod.rs
src/playback/: backend_gst.rs  backend_mock.rs  mod.rs
src/tag_editor/: mod.rs
src/ui/: panels.rs
ui/: CMakeLists.txt  README.md  ferrous.desktop
ui/qml/: Main.qml
ui/qml/components/: AlbumArtTile.qml  ColumnHeaderRow.qml  MetadataMarqueeRow.qml  PopupTransition.qml  SurfaceCard.qml  TrackMetadataCard.qml  UiPalette.qml  ViewerCloseButton.qml
ui/qml/controllers/: GlobalSearchController.qml  LibraryController.qml  PlaybackController.qml  QueueController.qml  ViewerController.qml
ui/qml/dialogs/: AboutDialog.qml  AutoNumberDialog.qml  DiagnosticsDialog.qml  GlobalSearchDialog.qml  ItunesArtworkDialog.qml  LibraryRootNameDialog.qml  PreferencesDialog.qml  TagEditorCloseConfirmDialog.qml  TagEditorDialog.qml  TagEditorStatusDetailsDialog.qml
ui/qml/logic/: ColorUtils.js  FormatUtils.js  PathUtils.js
ui/qml/panes/: LibraryPane.qml  QueuePane.qml  SidebarPane.qml  SpectrogramPane.qml  StatusBar.qml  TransportBar.qml
ui/qml/preferences/: DisplayPage.qml  LastFmPage.qml  LibraryPage.qml  SpectrogramPage.qml  SystemMediaPage.qml
ui/qml/viewers/: AlbumArtSurface.qml  AlbumArtViewerShell.qml  SpectrogramSurface.qml  SpectrogramViewerShell.qml
ui/src/: AppInstanceController.cpp  AppInstanceController.h  BinaryBridgeCodec.cpp  BinaryBridgeCodec.h  BridgeClient.cpp  BridgeClient.h  CoverImageProvider.cpp  CoverImageProvider.h  DiagnosticsLog.cpp  DiagnosticsLog.h  FerrousBridgeFfi.h  GlobalSearchResultsModel.cpp  GlobalSearchResultsModel.h  LibraryTreeModel.cpp  LibraryTreeModel.h  MprisController.cpp  MprisController.h  SpectrogramItem.cpp  SpectrogramItem.h  SpectrogramSeekTrace.cpp  SpectrogramSeekTrace.h  SpectrogramTraceLogging.h  TagEditorController.cpp  TagEditorController.h  TagEditorTableModel.cpp  TagEditorTableModel.h  WaveformItem.cpp  WaveformItem.h  WindowActivation.cpp  WindowActivation.h  main.cpp
ui/tests/: tst_app_instance_controller.cpp  tst_bridge_client.cpp  tst_qml_smoke.cpp
