[package]
name = "ferrous"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
eframe = "0.33"
egui = "0.33"
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }
gstreamer-audio = { version = "0.25", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
lofty = "0.23"
parking_lot = "0.12"
realfft = "3"
rfd = "0.17"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = false, features = ["flac", "mp3"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
walkdir = "2"

[features]
default = []
gst = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-audio"]
