[package]
name = "ferrous"
version = "0.1.5"
edition = "2021"
description = "A fast, Linux-native desktop music player"
license = "GPL-3.0-or-later"
repository = "https://github.com/Tiaxi/ferrous"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
libc = "0.2"
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }
gstreamer-audio = { version = "0.25", optional = true }
gstreamer-pbutils = { version = "0.25", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native-sync-persistent", "windows-native", "vendored"] }
lofty = "0.23"
md5 = "0.7"
parking_lot = "0.12"
realfft = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
strsim = "0.11"
serde_json = "1"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
walkdir = "2"

[features]
default = []
gst = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-audio", "dep:gstreamer-pbutils"]
profiling-logs = []
